; ModuleID = '/home/carl/AnghaBench/darwin-xnu/san/extr_kasan-memintrinsics.c___asan_memcmp.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/san/extr_kasan-memintrinsics.c___asan_memcmp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TYPE_MEMR = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @__asan_memcmp(i8* %0, i8* %1, i64 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  store i64 %2, i64* %6, align 8
  %7 = load i8*, i8** %4, align 8
  %8 = load i64, i64* %6, align 8
  %9 = load i32, i32* @TYPE_MEMR, align 4
  %10 = call i32 @kasan_check_range(i8* %7, i64 %8, i32 %9)
  %11 = load i8*, i8** %5, align 8
  %12 = load i64, i64* %6, align 8
  %13 = load i32, i32* @TYPE_MEMR, align 4
  %14 = call i32 @kasan_check_range(i8* %11, i64 %12, i32 %13)
  %15 = load i8*, i8** %4, align 8
  %16 = load i8*, i8** %5, align 8
  %17 = load i64, i64* %6, align 8
  %18 = call i32 @__nosan_memcmp(i8* %15, i8* %16, i64 %17)
  ret i32 %18
}

declare dso_local i32 @kasan_check_range(i8*, i64, i32) #1

declare dso_local i32 @__nosan_memcmp(i8*, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
